footer spacing below fix 1

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,8 @@ a:hover{
 	border-bottom: 1px solid #001833;
 	color: white;
 	padding: 25px;
+	position: relative;
+	top: 50px;
 }
 
 #menuButton{
